// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container snapshot renders 1`] = `
<div>
  <div
    class="css-1yuhvjn"
  >
    <div
      data-testid="drawable-palette"
      fillcolor="white"
      filllist="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      outlinecolor="black"
      outlinelist="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
      paintcolor="Red"
      paintlist="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
    <div
      class="css-h5izqy"
    >
      <div
        class="css-uxd8cw"
      >
        <button
          disabled=""
          label="[object Object]"
          title="Select"
        >
          <span
            path="mdiCursorDefault"
          />
        </button>
        <button
          label="[object Object]"
          title="Free Draw"
        >
          <span
            path="mdiPencil"
          />
        </button>
        <button
          label="[object Object]"
          title="Line"
        >
          <span
            path="mdiMinus"
          />
        </button>
        <button
          label="[object Object]"
          title="Rectangle"
        >
          <span
            path="mdiRectangle"
          />
        </button>
        <button
          label="[object Object]"
          title="Circle"
        >
          <span
            path="mdiCircle"
          />
        </button>
        <button
          label="[object Object]"
          title="Text Entry"
        >
          <span
            path="mdiFormatColorText"
          />
        </button>
        <button
          label="[object Object]"
          title="Eraser"
        >
          <span
            path="mdiEraser"
          />
        </button>
      </div>
      <div
        class="css-6oly8l"
        style="height: 0px; max-height: 0; overflow: scroll;"
      >
        <div
          data-testid="drawable-main"
          drawabledimensions="[object Object]"
          fillcolor="white"
          imagedimensions="[object Object]"
          imageurl="url"
          outlinecolor="black"
          paintcolor="Red"
          scale="1"
          session="[object Object]"
          textentry="[object Object]"
          toolactive="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Container snapshot renders disabled 1`] = `
<div>
  <div
    class="css-1yuhvjn"
  >
    <div
      class="css-h5izqy"
    >
      <div
        class="css-uxd8cw"
      >
        <button
          disabled=""
          label="[object Object]"
          title="Select"
        >
          <span
            path="mdiCursorDefault"
          />
        </button>
        <button
          disabled=""
          label="[object Object]"
          title="Free Draw"
        >
          <span
            path="mdiPencil"
          />
        </button>
        <button
          disabled=""
          label="[object Object]"
          title="Line"
        >
          <span
            path="mdiMinus"
          />
        </button>
        <button
          disabled=""
          label="[object Object]"
          title="Rectangle"
        >
          <span
            path="mdiRectangle"
          />
        </button>
        <button
          disabled=""
          label="[object Object]"
          title="Circle"
        >
          <span
            path="mdiCircle"
          />
        </button>
        <button
          disabled=""
          label="[object Object]"
          title="Text Entry"
        >
          <span
            path="mdiFormatColorText"
          />
        </button>
        <button
          disabled=""
          label="[object Object]"
          title="Eraser"
        >
          <span
            path="mdiEraser"
          />
        </button>
      </div>
      <div
        class="css-6oly8l"
        style="height: 0px; max-height: 0; overflow: scroll;"
      >
        <div
          data-testid="drawable-main"
          disabled=""
          drawabledimensions="[object Object]"
          fillcolor="white"
          imagedimensions="[object Object]"
          imageurl="url"
          outlinecolor="black"
          paintcolor="Red"
          scale="1"
          session="[object Object]"
          textentry="[object Object]"
          toolactive="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;
